# ChangeLog for pcasso

## v5.0.3

 * uses one global PSolver object to parse the formula
 * can use preprocessor of global PSolver object to simplify the formula internally